--- a/ninja_quiz/index.html
+++ b/ninja_quiz/index.html
@@ -11,14 +11,14 @@
   <!-- top section -->
   <div class="intro py-3 bg-white text-center">
     <div class="container">
-      <h2 class="text-primary display-3 my-4">Ninja Quiz</h2>
+      <h2 class="text-primary display-3 my-4">Video Game Quiz</h2>
     </div>
   </div>
 
   <!-- result section -->
   <div class="result py-4 d-none bg-light text-center">
     <div class="container lead">
-      <p>You are <span class="text-primary display-4 p-3">0%</span> ninja</p>
+      <p>You are <span class="text-primary display-4 p-3">0%</span> gamer</p>
     </div>
   </div>
 
@@ -29,47 +29,47 @@
 
       <form class="quiz-form text-light">
         <div class="my-5">
-          <p class="lead font-weight-normal">1. How do you give a ninja directions?</p>
+          <p class="lead font-weight-normal">1. Which game has sold more coppies?</p>
           <div class="form-check my-2 text-white-50">
-            <input type="radio" name="q1" value="A" checked>
-            <label class="form-check-label">Show them a map</label>
+            <input type="radio" name="q1" value="B" checked>
+            <label class="form-check-label">Minecraft</label>
           </div>
           <div class="form-check my-2 text-white-50">
-            <input type="radio" name="q1" value="B">
-            <label class="form-check-label">Don't worry, the ninja will find you</label>
+            <input type="radio" name="q1" value="A">
+            <label class="form-check-label">Grant Theft Auto 5</label>
           </div>
         </div>
         <div class="my-5">
-          <p class="lead font-weight-normal">2. If a ninja has 3 apples, then gives one to Mario & one to Yoshi, how many apples does the ninja have left?</p>
+          <p class="lead font-weight-normal">2. Which game is older?</p>
           <div class="form-check my-2 text-white-50">
             <input type="radio" name="q2" value="A" checked>
-            <label class="form-check-label">1 apple</label>
+            <label class="form-check-label">Terraria</label>
           </div>
           <div class="form-check my-2 text-white-50">
             <input type="radio" name="q2" value="B">
-            <label class="form-check-label">3 apples, and two corpses</label>
+            <label class="form-check-label">Tetris</label>
           </div>
         </div>
         <div class="my-5">
-          <p class="lead font-weight-normal">3. How do you know when you've met a ninja?</p>
+          <p class="lead font-weight-normal">3. What is the oldest video game?</p>
           <div class="form-check my-2 text-white-50">
-            <input type="radio" name="q3" value="A" checked>
-            <label class="form-check-label">You'll recognize the outfit</label>
+            <input type="radio" name="q3" value="B" checked>
+            <label class="form-check-label">Pong</label>
           </div>
           <div class="form-check my-2 text-white-50">
-            <input type="radio" name="q3" value="B">
-            <label class="form-check-label">The grim reaper will tell you</label>
+            <input type="radio" name="q3" value="A">
+            <label class="form-check-label">Fortnite</label>
           </div>
         </div>
         <div class="my-5">
-          <p class="lead font-weight-normal">4. What's a ninja's favourite array method?</p>
+          <p class="lead font-weight-normal">4. What won game of the year in 2020?</p>
           <div class="form-check my-2 text-white-50">
-            <input type="radio" name="q4" value="A" checked>
-            <label class="form-check-label">forEach()</label>
+            <input type="radio" name="q4" value="B" checked>
+            <label class="form-check-label">The Last of Us Part II()</label>
           </div>
           <div class="form-check my-2 text-white-50">
-            <input type="radio" name="q4" value="B">
-            <label class="form-check-label">slice()</label>
+            <input type="radio" name="q4" value="A">
+            <label class="form-check-label">HADES()</label>
           </div>
         </div>
         <div class="text-center">
